code chages for pdf generation